--- a/css/rules.css
+++ b/css/rules.css
@@ -30,15 +30,16 @@
     top:100px;
     left:50%;
     margin-left: -450px;
-    bottom:0;
+    bottom: 30px;
     width: 300px;
+    padding-top: 35px;
     background-color: #ffffff;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-
-    border: 1px solid #dbdfd6;
+    box-shadow: 0 0 2px #808080;
+    /*border: 1px solid #dbdfd6;*/
   }
 
   #rule-right{
@@ -47,29 +48,29 @@
     left:50%;
     margin-left: -150px;
     width: 600px;
-    bottom: 0;
+    bottom: 30px;
+    padding-top: 35px;
     background-color: #ffffff;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    border: 1px solid #dbdfd6;
-
+    border-left: 1px solid #a0a0a0;
+    box-shadow: 0 0 2px #808080;
+    /*border: 1px solid #dbdfd6;*/
   }
 
   .batch-menu{
     position: absolute;
     width: 100%;
-    bottom: 0;
-    background-color: #aaa;
-    border-top: 1px solid #ccc;
-    background-color: #e7e7e7;
-    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
+    top: 0;
+    background-color: #d3e8db;
+/*    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
     background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
-    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);*/
     background-repeat: repeat-x;
   }
 
@@ -87,7 +88,10 @@
 
   #rule-left .batch-menu ul li{
     float: left;
-    border-right: 1px solid #9E9898;
+    border-right: 1px solid #fff;
+    height: 100%;
+    line-height: 100%;
+    min-height: 25px;
   }
 
   #rule-left .batch-menu ul li:first-child{
@@ -101,26 +105,26 @@
     padding: 10px 8px 0 8px;
     display: block;
     text-align: center;
-    border-right: 1px solid #c8c8c8;
+/*    border-right: 1px solid #c8c8c8;
     background-color: #e7e7e7;
     background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
     background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
-    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);*/
     background-repeat: repeat-x;
   }
 
   #rule-left .batch-menu ul li a:hover{
     color: black;
-    background-color:#e9e9e9;
+/*    background-color:#e9e9e9;
     background-image:-moz-linear-gradient(top, #fff, #c8c8c8);
     background-image:-ms-linear-gradient(top, #fff, #c8c8c8);
     background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#c8c8c8));
     background-image:-webkit-linear-gradient(top, #fff, #c8c8c8);
     background-image:-o-linear-gradient(top, #fff, #c8c8c8);
-    background-image:linear-gradient(top, #fff, #c8c8c8);
+    background-image:linear-gradient(top, #fff, #c8c8c8);*/
     background-repeat:repeat-x;
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
   }
@@ -133,7 +137,9 @@
 
   #rule-right .batch-menu ul li{
     float: left;
-    border-right: 1px solid #9E9898;
+    border-right: 1px solid #fff;
+    height: 100%;
+    line-height: 100%;
   }
 
   #rule-right .batch-menu ul li a{
@@ -143,26 +149,25 @@
     padding: 10px 8px 0 8px;
     display: block;
     text-align: center;
-    border-right: 1px solid #c8c8c8;
-    background-color: #e7e7e7;
-    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
+/*    background-color: #e7e7e7;*/
+/*    background-image: -moz-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -ms-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f7f7f7), to(#cfcfcf));
     background-image: -webkit-linear-gradient(top, #f7f7f7, #cfcfcf);
     background-image: -o-linear-gradient(top, #f7f7f7, #cfcfcf);
-    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);
+    background-image: linear-gradient(top, #f7f7f7, #cfcfcf);*/
     background-repeat: repeat-x;
   }
 
   #rule-right .batch-menu ul li a:hover{
     color: black;
-    background-color:#e9e9e9;
+/*    background-color:#e9e9e9;
     background-image:-moz-linear-gradient(top, #fff, #c8c8c8);
     background-image:-ms-linear-gradient(top, #fff, #c8c8c8);
     background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#c8c8c8));
     background-image:-webkit-linear-gradient(top, #fff, #c8c8c8);
     background-image:-o-linear-gradient(top, #fff, #c8c8c8);
-    background-image:linear-gradient(top, #fff, #c8c8c8);
+    background-image:linear-gradient(top, #fff, #c8c8c8);*/
     background-repeat:repeat-x;
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
   }
