--- a/protected/modules/wap/views/wap/personalcenter-complete.html
+++ b/protected/modules/wap/views/wap/personalcenter-complete.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=100%, initial-scale=1.0, user-scalable=no">
 	<meta content="telephone=no" name="format-detection">
+	<script type="text/javascript" charset="utf-8" src="personalcenter.js"></script>
 </head>
 <body ontouchstart="return true;">
 <style>
@@ -919,9 +920,9 @@ footer {
 .catalog-item>.list-item-img {
 	float:left;
 	position:relative;
-	margin: 24px 10px;
-	height:32px;
-	width:32px;
+	margin: 8px;
+	height:64px;
+	width:64px;
 	border-width:0;
 	white-space:nowrap;
 	overflow:hidden
@@ -936,13 +937,13 @@ footer {
 	border-width:0;
 	white-space:nowrap;
 	overflow:hidden;
-	margin-right:10px
+	margin-right:20px
 }
 .catalog-item>.mainarea-in-list {
 	height:100%;
 	display:block;
 	width:auto;
-	margin-left:45px;
+	margin-left:80px;
 	margin-right:40px;
 	padding:20px 10px
 }
@@ -1426,39 +1427,147 @@ footer {
 
 </style>
 <title>个人中心</title>
-<div id="warning" style="display:none"><h4 id="warning-desc"></h4></div>
-<div id="maincontent" class="content-frame" style="display:none">
+<div id="warning" style="display:none"><h4 id="warning-desc">您当前处于非验证状态，页面仅供浏览。如需使用预约服务，敬请关注微信号:iFruits_cn。</h4></div>
+<div id="maincontent" class="content-frame" >
 	<div class="title" id="storestitle">
 		<h4>个人中心</h4>
 		<h5></h5>
 	</div>
 	<ul id="main-list" class="ul-catalog-listview">
-		<li class="catalog-item" id="historyorder" onclick="showordercontent()">
+		<li class="catalog-item" id="historyorder">
 		<div class="list-item-img"></div>
 		<div class="list-item-icon"></div>
-		<div class="mainarea-in-list"><h4>历史订单</h4><h5 id="historyorder-desc"></h5></div>
+		<div class="mainarea-in-list"><h4>历史订单</h4><h5>最近订单：2013-12-23</h5></div>
 		</li>
-		<li class="catalog-item" id="phonebind" onclick="Toast('功能尚待开放',3000)">
+		<li class="catalog-item" id="phonebind">
 		<div class="list-item-img"></div>
 		<div class="list-item-icon"></div>
-		<div class="mainarea-in-list"><h4>绑定手机</h4><h5 id="phonebind-desc">您当前尚未绑定手机</h5></div>
+		<div class="mainarea-in-list"><h4>绑定手机</h4><h5>您当前尚未绑定手机</h5></div>
 		</li>
-		<li class="catalog-item" id="cardbind" onclick="Toast('功能尚待开放',3000)">
+		<li class="catalog-item" id="cardbind">
 		<div class="list-item-img"></div>
 		<div class="list-item-icon"></div>
-		<div class="mainarea-in-list"><h4>绑定会员卡</h4><h5 id="cardbind-desc">你当前尚未绑定会员卡</h5></div>
+		<div class="mainarea-in-list"><h4>绑定会员卡</h4><h5>你当前尚未绑定会员卡</h5></div>
 		</li>
 	</ul>
 </div>
-
-<div id="ordercontent" class="content-frame" style="display:none">
+<div id="phonebind" class="content-frame" >
+	<div id="phonebind-a" class="content-frame-sub">
+		<section class="tips" id='tips-stepa'>
+			<header>
+				<h4>绑定手机号</h4>
+				<h5>第一步-输入您的手机号</h5>
+			</header>
+			<div id="phoneinfo-content" class="info-content">
+				<div id="phonenumber-form" class="form-content">
+					<label class="label-main">请输入您要绑定的手机:*</label>
+					<label class="label-tips" style="display:none"></label>
+					<input type="phonenumber" placeholder="请输入绑定的手机号" data-maxinput="20" data-nonull="true" onblur="checkinput(this)" id="phoneinput" value="">
+					<label class="label-desc">如需绑定会员卡，请确保预留手机号与该号码一致 </label>
+				</div>
+				<div id="verifycode-form" class="form-content">
+					<label class="label-main">请输入验证码:</label>
+					<label class="label-tips" style="display:none"></label>
+					<div class="checkcode-area">
+						<input type="text" readonly="readonly" id="checkcode" onclick="createcode()" class="code" >
+						<input type="checkcodeinput" placeholder="请输入验证码" data-maxinput="10" data-nonull="true" onblur="checkinput(this)" id="checkcodeinput" value="">
+					</div>
+				</div>
+			</div>
+		</section>
+		<button class="btn-icon-text" onclick="phonebindnext()" id="phonebindnext-btn"><span class="text-in-btn" id="phonebindnext">下一步</span><span class="img-in-btn"></span></button>
+	</div>
+	<div id="phonebind-b" class="content-frame-sub">
+		<section class="tips" id="tips-stepb">
+			<header>
+				<h4>绑定手机号</h4>
+				<h5>第二步-输入验证码</h5>
+			</header>
+			<div id="verification-content" class="info-content">
+				<div id="verification-form" class="form-content">
+					<label class="label-main">请输入验证码:</label>
+					<label class="label-tips" style="display:none"></label>
+					<input type="verification" placeholder="请输入您收到的验证码" data-maxinput="10" data-nonull="true" onblur="checkinput(this)" id="verificationinput" value="">
+					<label class="label-desc"></label>
+				</div>
+			</div>
+		</section>
+		<button class="btn-icon-text" onclick="phonebindsubmit()" id="phonebindsubmit-btn"><span class="text-in-btn" id="phonebindsubmit">完成绑定</span><span class="img-in-btn"></span></button>
+	</div>
+	<div id="phonebind-c" class="content-frame-sub">
+		<section class="tips" id='tips-havebind'>
+			<header>
+				<h4>已绑定手机</h4>
+			</header>
+			<div class="info-content">
+				<p id="tips-desc-binded">你当前绑定的手机号为：15298387110</p>
+			</div>
+		</section>
+		<section id="phoneinfo" class="info">
+			
+		</section>
+	</div>
+	<div class="single-btnarea" id="phonenext-btnarea">
+		<button class="btn-icon-text" onclick="phonenext()" id="phonenext-btn"><span class="text-in-btn" id="phonenext">下一步</span><span class="img-in-btn"></span></button>
+	</div>
+</div>
+<div id="vipbind" class="content-frame" >
+	<section class="tips" id='tips-error'>
+		<header>
+			<h4 id="tips-title-binded">已绑定手机</h4>
+		</header>
+		<div class="tips-content">
+			<p id="tips-desc-binded">你当前绑定的手机号为：15298387110</p>
+		</div>
+	</section>
+	<section id="phoneinfo" class="info">
+		<header>
+			<h4>绑定手机号</h4>
+		</header>
+		<div id="phoneinfo-content" class="info-content">
+		<div id="phonenumber-form" class="form-content">
+		<label class="label-main">请输入您要绑定的手机:*</label>
+		<label class="label-tips" style="display:none"></label>
+		<input type="phonenumber" placeholder="请输入绑定的手机号" data-maxinput="10" data-nonull="true" onblur="checkinput(this)" id="name" value="">
+		<label class="label-desc">如需绑定会员卡，请确保预留手机号与该号码一致 </label>
+		</div>
+		<div id="verifycode-form" class="form-content">
+		<label class="label-main">请输入验证码:</label>
+		<label class="label-tips" style="display:none"></label>
+		<div class="verifycode-area">
+		<input type="verifycode" placeholder="请输入验证码" data-maxinput="10" data-nonull="true" onblur="checkinput(this)" id="name" value="">
+		<img src="/weChat/img/category.jpg" alt="点击重新载入">
+		<label class="label-desc">点击验证码刷新</label>
+		</div>
+		</div>
+		</div>
+	</section>
+	<section id="verification" class="info">
+		<header>
+			<h4>验证</h4>
+		</header>
+		<div id="verification-content" class="info-content">
+		<div id="verification-form" class="form-content">
+		<label class="label-main">请输入验证码:</label>
+		<label class="label-tips" style="display:none"></label>
+		<input type="verification" placeholder="请输入您收到的验证码" data-maxinput="10" data-nonull="true" onblur="checkinput(this)" id="name" value="">
+		<label class="label-desc">验证码已发送至你的手机15298387110</label>
+		</div>
+		</div>
+		</div>
+	</section>
+	<div class="single-btnarea" id="phonenext-btnarea">
+		<button class="btn-icon-text" onclick="phonenext()" id="phonenext-btn"><span class="text-in-btn" id="phonenext">下一步</span><span class="img-in-btn"></span></button>
+	</div>
+</div>
+<div id="history" class="content-frame" >
 	<ul id='orderhistory-list' class="ul-orderhistory-listview">
 		<li class="orderhistory-item" id="orderhistory-first-item">
 			<div class="btnarea-in-list">
 			</div>
 			<div class="mainarea-in-list">
 				<h4>历史订单</h4>
-				<h5>如有任何疑问，请联系商家</h5>
+				<h5>如有任何疑问，请直接联系商家</h5>
 			</div>
 		</li>
 	</ul>
@@ -1485,32 +1594,20 @@ footer {
 	<div id="loadingshapelight" class="bar"></div>
 	<p id="loadingtips"></p>
 </div>
-<footer id="personalcenterfooter" style="display: none;">
-<div class="left-footer">
-	<button onclick = "showmaincontent()" id="back-btn" class="btn-icon">
-		<span class="img-in-btn"></span>
-	</button>
-</div>
-<div class="center-footer"><h4 id="personaltitle"></h4></div>
+<footer id="mainfooter" style="display: none;">
+<div class="left-footer"></div>
+<div class="center-footer"></div>
 <div class="right-footer"></div>
 </footer>
 <div class="toast" id="mytoast"></div>
-<div class="backkit-hide" id="backkit" style="display:none">
-<span class="backtolist" id="backtolist" >
-<h4>返回列表</h4>
-</span>
-<span class="tiny" id="tiny"></span>
-</div>
 
 
 <script type="text/javascript">
     //fake
 	var sellerid=9;
-	var storeid=1;
 	var openid='lvxiang';
-	var identitykey='123123123123';
+	var identitykey=123123123123;
 	var publicID=null;
-	var isfromfather=true;
 
 	// //baseid
 	// var sellerid="<?php echo $sellerId?>";
@@ -1527,19 +1624,15 @@ footer {
 	var BASEURL='/weChat/';
 	//fake
 	BASEURLSMALLICON='http://192.168.1.196/weChat/img/wap/myicon-personalcenter.png';
-	BASEURLBIGICON='http://192.168.1.196/weChat/img/wap/myicon-personalcenter-middle.png';
+	BASEURLBIGICON='http://192.168.1.196/weChat/img/wap/myicon-personalcenter-big.png';
 	//var BASEURLSMALLICON='/weChat/img/wap/myicon-personalcenter.png';
 	//var BASEURLBIGICON='/weChat/img/wap/myicon-personalcenter-big.png';
 
 	var MYJQUERY='http://libs.baidu.com/jquery/2.0.3/jquery.min.js';
 	//fake
-	var MYOWNJS='http://192.168.1.196/weChat/js/wap/personalcenter.js';
+	MYOWNJS='http://192.168.1.196/weChat/js/wap/personalcenter.js';
 	// var MYOWNJS='<?php echo Yii::app()->baseUrl?>/js/wap/personalcenter.js';
 
-
-	//fake
-	var AJAXFORRESULT='http://192.168.1.196/weChat/index.php/wap/order/getPartOrders';
-	var AJAXFORBASEINFO='http://192.168.1.196/weChat/index.php/wap/order/getPersonalInfo';
 	// var AJAXFORDATA='<?php echo Yii::app()->createUrl('wap/wap/getData'); ?>';
 	// var AJAXFORSUBMIT='<?php echo Yii::app()->createUrl('wap/order/order'); ?>';
 	// var AJAXFORRESULT='<?php echo Yii::app()->createUrl('wap/order/getPartOrders'); ?>';
@@ -1551,6 +1644,7 @@ footer {
 	var myanimation=null;
 
 	window.onload = function(){
+		document.getElementById("warning-desc").innerHTML='您当前处于非验证状态，页面仅供浏览。如需使用预约服务，敬请关注微信号:'+publicID;
 		if(verifybaseid()){
 			if(!verifyidentitykey()){
 				callwrongkey();
@@ -1828,7 +1922,6 @@ footer {
 
     //key错误
 	function callwrongkey(){
-		document.getElementById("warning-desc").innerHTML='您当前处于非验证状态，页面仅供浏览。如需使用本页面服务，敬请关注微信号:'+publicID;
 		isverified=false;
 		document.getElementById('warning').style.display = 'block';
 	}
