--- a/css/product.css
+++ b/css/product.css
@@ -1,4 +1,19 @@
 /* 中间栏样式*/
+  img{
+    max-width: 100%;
+    max-height: 100%;
+    box-shadow: 0 0 3px #808080;
+    -webkit-box-shadow: 0 0 3px #808080;
+    -moz-box-shadow: 0 0 3px #808080;
+    vertical-align: middle;
+  }
+
+  .image-center-helper{
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
+
   .main #task{
     position: absolute;
     top: 41px;
@@ -305,8 +320,10 @@
 
     /*第三块区域*/
   .main .task-detail{
-    max-width: 560px;
     min-width: 555px;
+    height: 100%;
+    overflow: auto;
+    text-align: left;
   }
 
   .task-detail .prod{
@@ -315,8 +332,6 @@
 
   .prod img{
     height:auto;
-    min-height: 150px;
-    max-height: 165px;
   }
 
   .info-group-left{
@@ -332,6 +347,103 @@
 
   .info-group-left .content-label{
     margin-left: 300px;
+  }
+
+  .image-group{
+    width: 100%;
+    min-height: 200px;
+    padding-bottom: 40px;
+  }
+
+  .image-group .image-item{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-right: 15px;
+    margin-top: 5px;
+    line-height: 80px;
+  }
+
+  .image-group .image-item .image-item-img-container{
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+  }
+
+  .image-group .image-item .image-item-img-container img{
+    max-width: 80px;
+    max-height: 80px;
+    vertical-align: middle;
+  }
+
+  .image-group .image-item form{
+    margin: 0 0 0;
+  }
+
+  .image-group .image-item input{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    margin-top: -80px;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .image-group .image-item:hover{
+    cursor: pointer;
+  }
+
+  #image-gallery{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 10000;
+    display: none;
+  }
+  #image-gallery #image-gallery-container{
+    position: absolute;
+    width: 600px;
+    height: 450px;
+    left: 50%;
+    margin-left: -300px;
+    top: 50%;
+    margin-top: -225px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px #808080;
+  }
+  #image-gallery #image-gallery-container #image-gallery-container-img{
+    width: 100%;
+    height: 400px;
+    border-bottom: 1px solid #d0d0d0;
+    text-align: center;
+  }
+  #image-gallery #image-gallery-container #image-gallery-delete{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    line-height: 50px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  #image-gallery #image-gallery-container #image-gallery-delete:hover{
+    cursor: pointer;
+    background-color: #d2322d;
+    color: #fff;
+  }
+  #image-gallery #image-gallery-container #image-gallery-container-img img{
+    vertical-align: center;
+    margin: auto;
+    max-width: 95%;
+    max-height: 95%;
   }
 
   .batch .type-img-desc{
@@ -413,7 +525,7 @@
   }
 
   .info-group{
-    margin-bottom: 8px;
+    display: block;
   }
 
   .info-group .title-label{
@@ -427,6 +539,7 @@
   }
 
   .date-group{
+    width: 100%;
     float: left;
     margin-bottom: 8px;
   }
@@ -475,8 +588,139 @@
     background-repeat:repeat-x;
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
   }
-
   #outdate{
     color:rgb(65, 60, 60);
   }
-  
+  #discount-manager{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 10000;
+    background-color: rgba(0,0,0,0.9);
+    display: none;
+  }
+  #discount-manager-container{
+    position: absolute;
+    width: 500px;
+    height: 400px;
+    left: 50%;
+    margin-left: -250px;
+    top: 50%;
+    margin-top: -200px;
+    background-color: #fff;
+  }
+  #discount-manager-header{
+    border-bottom: 1px solid #ddd;
+    background-color: #f6f6f6;
+    height: 50px;
+    color: #333;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 50px;
+    font-family: "Helvetica Neue", Helvetica, Arial,"Microsoft Yahei","SimHei",Sans-serif;
+    padding-left: 15px;
+  }
+  #discount-manager-list{
+    width: 100%;
+    text-align: center;
+    height: 298px;
+    overflow: auto;
+  }
+  #discount-manager-footer{
+    position: absolute;
+    width: 500px;
+    bottom: 0;
+    margin-top: 300px;
+    border-top: 1px solid #ddd;
+    background-color: #d3e8db;
+    height: 50px;
+  }
+  #discount-manager .modal-btn{
+    width: 120px;
+    height: 30px;
+    border-radius: 5px;
+    display: inline-block;
+    float: right;
+    margin: 10px;
+    text-align: center;
+    line-height: 30px;
+    border: 2px solid #d3e8db;
+  }
+  #discount-manager .modal-btn:hover{
+    cursor: pointer;
+    border: 2px solid #f6f6f6;
+  }
+  #discount-manager .modal-btn.modal-cancel{
+    background-color: #f6f6f6;
+    color: #808080;
+  }
+  #discount-manager .discount-manager-item{
+    width: 470px;
+    height: 50px;
+    overflow: hidden;
+    text-align: left;
+    margin: auto;
+    box-shadow: 0 0 3px #808080;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  #discount-manager .discount-manager-item div{
+    margin-left: 10px;
+  }
+  #discount-manager .discount-manager-item .discount-item-date{
+    height: 25px;
+    line-height: 25px;
+    color: #000;
+    font-weight: bold;
+    font-size: 1.1em;
+  }
+  #discount-manager .discount-manager-item .discount-item-time{
+    height: 25px;
+    line-height: 25px;
+    color: #808080;
+  }  
+  #discount-manager .discount-manager-item .discount-item-delete{
+    float: right;
+    width: 20px;
+    height: 20px;
+    margin-top: -35px;
+    margin-right: 10px;
+    line-height: 20px;
+    text-align: center;
+  }
+  #discount-manager .discount-manager-item .discount-item-delete:hover{
+    font-weight: bold;
+    font-size: 1.1em;
+  }
+  #discount-manager .discount-manager-edit{
+    width: 470px;
+    height: 170px;
+    overflow: hidden;
+    text-align: left;
+    box-shadow: 0 0 3px #808080;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  #discount-manager .discount-manager-edit label{
+    margin-left: 10px;
+  }
+  #discount-manager .discount-manager-edit .discount-manager-input-group{
+    margin-left: 10px;
+  }
+  #discount-manager .discount-manager-edit .discount-manager-input-group input{
+    display: inline-block;
+  }
+  #discount-manager .discount-edit-btn-container{
+    width: 100%;
+    border-top: 1px solid #ddd;
+    background-color: #f6f6f6;
+  }
+  #discount-manager .discount-edit-btn-container .btn{
+    float: right;
+    margin-right: 10px;
+    margin-top: 2px;
+  }
+
